Completed all interface of tenant.
