# docs/swagger.yaml
@@ -10,6 +10,9 @@ definitions:
         type: integer
       qps:
         type: integer
+    required:
+    - app_id
+    - name
     type: object
   dto.AddAppOutput:
     type: object
@@ -268,6 +271,11 @@ definitions:
         type: string
     type: object
   dto.DeleteAppInput:
+    properties:
+      id:
+        type: integer
+    required:
+    - id
     type: object
   dto.DeleteAppOutput:
     type: object
@@ -282,11 +290,21 @@ definitions:
   dto.GetAppDetailInput:
     properties:
       id:
+        example: 4
         type: integer
     required:
     - id
     type: object
   dto.GetAppDetailOutput:
+    properties:
+      app_id:
+        type: string
+      name:
+        type: string
+      qpd:
+        type: integer
+      qps:
+        type: integer
     type: object
   dto.GetAppListInput:
     properties:
@@ -310,6 +328,25 @@ definitions:
         type: array
       total:
         type: integer
+    type: object
+  dto.GetAppStatInput:
+    properties:
+      id:
+        example: 3
+        type: integer
+    required:
+    - id
+    type: object
+  dto.GetAppStatOutput:
+    properties:
+      today_list:
+        items:
+          type: integer
+        type: array
+      yesterday_list:
+        items:
+          type: integer
+        type: array
     type: object
   dto.GetAvatarInput:
     properties:
@@ -516,6 +553,21 @@ definitions:
         type: integer
     type: object
   dto.UpdateAppInput:
+    properties:
+      app_id:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      qpd:
+        type: integer
+      qps:
+        type: integer
+    required:
+    - app_id
+    - id
+    - name
     type: object
   dto.UpdateAppOutput:
     type: object
@@ -802,7 +854,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: 获取租户详细信息
+      description: 增加租户
       operationId: /app/add
       parameters:
       - description: body
@@ -823,7 +875,35 @@ paths:
                 data:
                   $ref: '#/definitions/dto.AddAppOutput'
               type: object
-      summary: 获取租户详细信息
+      summary: 增加租户
+      tags:
+      - 租户接口
+  /app/del:
+    get:
+      consumes:
+      - application/json
+      description: 删除租户
+      operationId: /app/del
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.DeleteAppInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/dto.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.DeleteAppOutput'
+              type: object
+      summary: 删除租户
       tags:
       - 租户接口
   /app/detail:
@@ -833,7 +913,8 @@ paths:
       description: 获取租户详细信息
       operationId: /app/detail
       parameters:
-      - in: query
+      - example: 4
+        in: query
         name: id
         required: true
         type: integer
@@ -887,19 +968,18 @@ paths:
       summary: 获取租户列表
       tags:
       - 租户接口
-  /app/update:
-    post:
+  /app/stat:
+    get:
       consumes:
       - application/json
-      description: 删除租户
-      operationId: /app/update
+      description: 获取租户流量统计
+      operationId: /app/stat
       parameters:
-      - description: body
-        in: body
-        name: body
+      - example: 3
+        in: query
+        name: id
         required: true
-        schema:
-          $ref: '#/definitions/dto.DeleteAppInput'
+        type: integer
       produces:
       - application/json
       responses:
@@ -910,9 +990,37 @@ paths:
             - $ref: '#/definitions/dto.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/dto.DeleteAppOutput'
+                  $ref: '#/definitions/dto.GetAppStatOutput'
               type: object
-      summary: 删除租户
+      summary: 获取租户流量统计
+      tags:
+      - 租户接口
+  /app/update:
+    post:
+      consumes:
+      - application/json
+      description: 更新租户
+      operationId: /app/update
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UpdateAppInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/dto.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.UpdateAppOutput'
+              type: object
+      summary: 更新租户
       tags:
       - 租户接口
   /public/get/avatar:
